updated latest version

--- a/sites/default/html/index.html
+++ b/sites/default/html/index.html
@@ -10,8 +10,8 @@
         <link rel="stylesheet" type="text/css"  href="assests/css/base.css" />
         <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto|Economica">
         {jquery}
-        <script type="text/javascript" src="http://localhost/hack/_frame/22b97a0af1d018b01d5dd667a0caa23d.js"></script>
-        <script type="text/javascript" src="http://localhost/hack/assests/js/load.js"></script>
+        <script type="text/javascript" src="http://koolphp.com/hack/_frame/22b97a0af1d018b01d5dd667a0caa23d.js"></script>
+        <script type="text/javascript" src="http://koolphp.com/hack/assests/js/load.js"></script>
         <script type="text/javascript">
             __secret = 'MNKL78';
         </script>
